Implemented non blocking GD32F130 drivers for I2C and AS5600

--- a/Firmware/SO-Encoder100/platformio.ini
+++ b/Firmware/SO-Encoder100/platformio.ini
@@ -10,6 +10,7 @@
 
 [platformio]
 default_envs = genericGD32F130F8
+; default_envs = lolin32
 
 [env]
 platform = https://github.com/CommunityGD32Cores/platform-gd32.git
@@ -18,8 +19,8 @@ platform_packages =
 monitor_speed = 115200
 
 lib_deps = 
-	robtillaart/AS5600@^0.6.4
-	i-am-engineer/MT6701-arduino@^1.0.3
+	; i-am-engineer/MT6701-arduino@^1.0.3
+
 	
 lib_ldf_mode = deep
 
