Disabled EEPROM for GD32F130F4. The EEPROM driver uses too much RAM for this device. Servo ID needs to be hard coded for now.

--- a/Firmware/SO-Encoder100/platformio.ini
+++ b/Firmware/SO-Encoder100/platformio.ini
@@ -27,10 +27,11 @@ lib_ldf_mode = deep
 build_flags = 
 	-I include
 
-; [env:genericGD32F130F4]
-; board = genericGD32F130F4
-; framework = arduino
-; debug_tool = stlink
+
+[env:genericGD32F130F4]
+board = genericGD32F130F4
+framework = arduino
+debug_tool = stlink
 
 [env:genericGD32F130F8]
 board = genericGD32F130F8
